zz-nvim/grammars/organize/test/corpus/organize.txt
========================================
(tags) grouping: buckets at `#`, a quoted tag heading (organize_literal.bats generate_grouped)
========================================
---
% generated: `cg organize -group-by (tags) -query "_terminal=no" caldav:http://127.0.0.1:24107/dav/lit/`
- _base = @blake2b256-tmm4308jsj6er2962f645yzpgvhtkc4qfxcqggagks63c2gct0usa7jefr
- _anchor = caldav:http://127.0.0.1:24107/dav/lit/
- _query = _terminal=no
- _type = !caldav-object-vtodo-v1
- _group-by = (tags)
! organize-base-v1
---

- [lit2.ics location=Bank] Read book

# "_ inbox"

- [lit1.ics] Triage inbox

# "planning, misc"

- [lit3.ics] Plan, then do

----------------------------------------

(source_file
  (metadata
    (comment_line
      (comment_text))
    (field_line
      (field_key)
      (field_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_type
        (field_type_name)))
    (group_by_line
      (field_key)
      (qualifier
        (qualifier_name)))
    (type_line
      (type_name)))
  (blank_line)
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (heading_tag_quoted)))
  (blank_line)
  (object_line
    (box
      (box_object_id))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (heading_tag_quoted)))
  (blank_line)
  (object_line
    (box
      (box_object_id))
    (description)))

========================================
namespace grouping: `- _group-by = project`, `# project` root + nested `## -client` buckets (organize_ns.bats generate_grouped)
========================================
---
% generated: `cg organize -group-by project -query "_terminal=no" caldav:http://127.0.0.1:24103/dav/ns/`
- _base = @blake2b256-estwgmflazsefw07z9zp262s6ahrp58kmcghq88ej4n3ved8efds4rx9vg
- _anchor = caldav:http://127.0.0.1:24103/dav/ns/
- _query = _terminal=no
- _type = !caldav-object-vtodo-v1
- _group-by = project
! organize-base-v1
---

- [nsD.ics other] Loose idea

# project

## -client

- [nsA.ics] Acme retainer
- [nsB.ics] Baxter audit

## -cutting_garden

- [nsC.ics] CG roadmap

----------------------------------------

(source_file
  (metadata
    (comment_line
      (comment_text))
    (field_line
      (field_key)
      (field_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_type
        (field_type_name)))
    (group_by_line
      (field_key)
      (tag_name))
    (type_line
      (type_name)))
  (blank_line)
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id))
    (description))
  (object_line
    (box
      (box_object_id))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id))
    (description)))

========================================
field grouping: `# status=` dimension heading, `## =value` buckets (organize_groupby.bats organize_groupby_field)
========================================
---
% generated: `cg organize -group-by status= -query "_terminal=no" caldav:http://127.0.0.1:24108/dav/fields/`
- _base = @blake2b256-z0rzmgdglx3g4r4fhgy40fyf5y6ptj5tvm7zqenhyl75lcrlp7wqh3w96k
- _anchor = caldav:http://127.0.0.1:24108/dav/fields/
- _query = _terminal=no
- _type = !caldav-object-vtodo-v1
! organize-base-v1
---

- [field2.ics errand work priority=1_should] Read book
- [field3.ics work priority=2_nice] Water plants
- [field4.ics] Someday idea
- [field5.ics] Waiting idea

# status=

## =needs-action

- [field1.ics location=Bank priority=0_must] Pay rent

## =in-process

## =completed

## =cancelled

----------------------------------------

(source_file
  (metadata
    (comment_line
      (comment_text))
    (field_line
      (field_key)
      (field_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_type
        (field_type_name)))
    (type_line
      (type_name)))
  (blank_line)
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident))
      (box_tag
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (object_line
    (box
      (box_object_id))
    (description))
  (object_line
    (box
      (box_object_id))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_dimension
      (dim_name)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text))))

========================================
date field at a granularity: `# date_due=(month)` qualifier (organize_groupby.bats organize_groupby_date_granularity)
========================================
---
% generated: `cg organize -group-by date_due=(month) -query "_terminal=no" caldav:http://127.0.0.1:24108/dav/sched/`
- _base = @blake2b256-2negckx3etgmu87w35wjfl0gpyp3yte0d4ukrqeff8kmys6878uqyyll3g
- _anchor = caldav:http://127.0.0.1:24108/dav/sched/
- _query = _terminal=no
- _type = !caldav-object-vtodo-v1
! organize-base-v1
---

# date_due=(month)

## =2026-08

- [sched1.ics date_due=2026-08-15 time_due=14-30] Book flights

## =2026-09

- [sched2.ics date_due=2026-09-10 time_due=16-30] Renew passport

----------------------------------------

(source_file
  (metadata
    (comment_line
      (comment_text))
    (field_line
      (field_key)
      (field_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_type
        (field_type_name)))
    (type_line
      (type_name)))
  (blank_line)
  (blank_line)
  (heading
    (heading_marker)
    (heading_dimension
      (dim_name)
      (qualifier
        (qualifier_name))))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description)))

========================================
box tag atoms: bare (`work-x status`) and quoted (`"_ inbox"`) tags after the id (organize_literal.bats write_lit2_edited)
========================================
- [lit2.ics work-x status location=Bank] Read book
- [lit2.ics "_ inbox" location=Bank] Read book

----------------------------------------

(source_file
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident))
      (box_tag
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_tag_quoted))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description)))

========================================
empty headings are resets: `##` pops to the parent, `#` to ungrouped (organize_headings.bats organize_headings_reset_pops_to_parent_and_ungrouped)
========================================
---
% generated: `cg organize -group-by (tags) -query "_terminal=no" caldav:http://127.0.0.1:24109/dav/fields/`
- _base = @blake2b256-usdexhm8tx5w6neeyxr4pvza4vy6ad2pshr44yvl6e27uw83fzmqz2fu5e
- _anchor = caldav:http://127.0.0.1:24109/dav/fields/
- _query = _terminal=no
- _type = !caldav-object-vtodo-v1
- _group-by = (tags)
! organize-base-v1
---

- [field5.ics] Waiting idea

# work

- [field3.ics priority=2_nice] Water plants

## errand

- [field4.ics] Someday idea

##

- [field1.ics location=Bank status=needs-action priority=0_must] Pay rent

#

- [field2.ics priority=1_should] Read book

----------------------------------------

(source_file
  (metadata
    (comment_line
      (comment_text))
    (field_line
      (field_key)
      (field_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_type
        (field_type_name)))
    (group_by_line
      (field_key)
      (qualifier
        (qualifier_name)))
    (type_line
      (type_name)))
  (blank_line)
  (blank_line)
  (object_line
    (box
      (box_object_id))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id))
    (description))
  (blank_line)
  (heading_reset
    (heading_marker))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (blank_line)
  (heading_reset
    (heading_marker))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value)))
    (description)))

========================================
reset heading with trailing blanks: `##   ` is still a reset
========================================
# work

##   

- [field4.ics] Someday idea

----------------------------------------

(source_file
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (heading_reset
    (heading_marker))
  (blank_line)
  (object_line
    (box
      (box_object_id))
    (description)))

========================================
bare `# status` is a tag bucket, `# status=` a field grouping (the LR(1) split on `=`)
========================================
# status

- [field2.ics priority=1_should] Read book

# status=

## =needs-action

- [field1.ics location=Bank priority=0_must] Pay rent

----------------------------------------

(source_file
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_dimension
      (dim_name)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description)))

========================================
heading depth is structure-only: a `##`-rooted document (organize_headings.bats organize_headings_double_hash_document_applies_identically)
========================================
- [field1.ics location=Bank status=needs-action priority=0_must] Pay rent
- [field4.ics] Someday idea
- [field5.ics] Waiting idea

## errand

- [field2.ics work priority=1_should] Read book
- [field3.ics priority=2_nice] Water plants

## work

- [field2.ics errand priority=1_should] Read book

----------------------------------------

(source_file
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (object_line
    (box
      (box_object_id))
    (description))
  (object_line
    (box
      (box_object_id))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description)))

========================================
wrapped boxes: a multi-line interior, plain and `\-` / `\#` description continuations, a bare `-` new box (cutting-garden#261, organize_wrap.bats)
========================================
# work

- [lit2.ics
    work-x
    location=Bank] Read book
- [lit3.ics] Plan, then do
  \- now
  \#1
  and more
- [lit1.ics] Triage inbox

----------------------------------------

(source_file
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (object_line
    (box
      (box_object_id))
    (description)
    (description_continuation)
    (description_continuation)
    (description_continuation))
  (object_line
    (box
      (box_object_id))
    (description)))

========================================
wrapped quoted value and any-`\X` escapes: a quoted atom across lines (`- two` is not `- [`), `\%` and `\\` continuations (cutting-garden#261)
========================================
- [a.ics x="one
  - two"] Grew
\% 5 percent
\\server

----------------------------------------

(source_file
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_quoted)))
    (description)
    (description_continuation)
    (description_continuation)))

========================================
an open quoted value never swallows a `- [` new-box line (cutting-garden#261)
:error
========================================
- [id1 note="oops] A
- [b2 size=12" tag] B

----------------------------------------

========================================
an open box interior never swallows a `- [` new-box line (cutting-garden#261)
:error
========================================
- [a.ics
- [b.ics] B

----------------------------------------

========================================
a `%` line is not a description continuation (cutting-garden#261)
:error
========================================
- [a.ics] Grew
% 5 percent

----------------------------------------

========================================
a `\` escaping nothing is not a description continuation (cutting-garden#261)
:error
========================================
- [a.ics] Path
\ x

----------------------------------------

========================================
type heading (spelling 1) and a typed, blob-bearing box (legacy ladder, kept parsing)
========================================
# !caldav-object-vevent-v1

- [event1.ics !caldav-object-vevent-v1 date_start=2026-09-10 time_start=16-30 location=HQ @blake2b256-9ft3x] Standup

----------------------------------------

(source_file
  (heading
    (heading_marker)
    (heading_type
      (heading_type_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_type
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value))
      (box_field
        (box_ident)
        (box_bare_value))
      (box_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (description)))

========================================
`- _tag-atoms = trailing` envelope lever: quoted tag atoms, a trailing tag after a `k=v` atom (organize_tagatoms.bats organize_tagatoms_trailing_config)
========================================
---
% generated: `cg organize -group-by status= -query "_terminal=no" caldav:http://127.0.0.1:24110/dav/lit/`
- _base = @blake2b256-2c5gk9a26pys4eaya87nf5hwm2psauk56cj8esgguwsuufm352qqhyj8wk
- _anchor = caldav:http://127.0.0.1:24110/dav/lit/
- _query = _terminal=no
- _type = !caldav-object-vtodo-v1
- _tag-atoms = trailing
! organize-base-v1
---

- [lit1.ics "_ inbox"] Triage inbox
- [lit2.ics location=Bank chore] Read book
- [lit3.ics "planning, misc"] Plan, then do

# status=

## =needs-action

## =in-process

## =completed

## =cancelled

----------------------------------------

(source_file
  (metadata
    (comment_line
      (comment_text))
    (field_line
      (field_key)
      (field_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_type
        (field_type_name)))
    (field_line
      (field_key)
      (field_bare))
    (type_line
      (type_name)))
  (blank_line)
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_tag_quoted)))
    (description))
  (object_line
    (box
      (box_object_id)
      (box_field
        (box_ident)
        (box_bare_value))
      (box_tag
        (box_ident)))
    (description))
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_tag_quoted)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_dimension
      (dim_name)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text))))

========================================
`- _tag-strip = none` envelope lever: placement (Via) tags kept in every box (organize_tagatoms.bats organize_tagatoms_strip_none)
========================================
---
% generated: `cg organize -group-by project -query "_terminal=no" caldav:http://127.0.0.1:24110/dav/ns/`
- _base = @blake2b256-p3cvknryzz6ezypupjrqand0lpj555kt02n833dcnw3gux5048qs7kttvr
- _anchor = caldav:http://127.0.0.1:24110/dav/ns/
- _query = _terminal=no
- _type = !caldav-object-vtodo-v1
- _group-by = project
- _tag-strip = none
! organize-base-v1
---

- [nsD.ics other] Loose idea

# project

## -client

- [nsA.ics project-client-acme] Acme retainer
- [nsB.ics project-client-baxter] Baxter audit

## -cutting_garden

- [nsC.ics project-cutting_garden] CG roadmap

----------------------------------------

(source_file
  (metadata
    (comment_line
      (comment_text))
    (field_line
      (field_key)
      (field_blob
        (markl_id
          (markl_format)
          (markl_data))))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_bare))
    (field_line
      (field_key)
      (field_type
        (field_type_name)))
    (group_by_line
      (field_key)
      (tag_name))
    (field_line
      (field_key)
      (field_bare))
    (type_line
      (type_name)))
  (blank_line)
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident)))
    (description))
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident)))
    (description))
  (blank_line)
  (heading
    (heading_marker)
    (heading_tag
      (tag_name)))
  (blank_line)
  (object_line
    (box
      (box_object_id)
      (box_tag
        (box_ident)))
    (description)))

========================================
temp-id boxes create objects: `+id`, a quoted `+"id"`, a bare `+` (forge organize F8, organize_create.bats)
========================================
# milestone=

## =v0.3

- [+wrap-bug !fj-issue-v1 bug milestone=v0.3] Wrapped boxes lose their description
- [+"wrap bug" area-organize] Wrapped boxes lose their description
- [+] One-off

----------------------------------------

(source_file
  (heading
    (heading_marker)
    (heading_dimension
      (dim_name)))
  (blank_line)
  (heading
    (heading_marker)
    (heading_value
      (heading_value_text)))
  (blank_line)
  (object_line
    (box
      (box_temp_id
        (box_temp_name))
      (box_type
        (box_ident))
      (box_tag
        (box_ident))
      (box_field
        (box_ident)
        (box_bare_value)))
    (description))
  (object_line
    (box
      (box_temp_id
        (box_temp_quoted))
      (box_tag
        (box_ident)))
    (description))
  (object_line
    (box
      (box_temp_id))
    (description)))
